2010-01-15  smeghead  <smeghead@users.sourceforge.jp>

    * メール送信モジュールで、メールの件名に状態を含めるように修正した。

2010-01-10  smeghead  <smeghead@users.sourceforge.jp>

    * メモリリークしていた箇所を修正した。

2010-01-06  smeghead  <smeghead@users.sourceforge.jp>

    * 1.3.08リリース

2010-01-06  smeghead  <smeghead@users.sourceforge.jp>

    * サブプロジェクトのsqlite3の実行時のパスの区切り文字をOSによって使いわけ
    るように修正した。Windowsでも動作させるため。
    * 削除したサブプロジェクトが存在する場合、トップのプロジェクト管理ページを
    開いた時にエラーが発生するのを修正した。
      http://sourceforge.jp/ticket/browse.php?group_id=3135&tid=20147
      http://groups.google.com/group/starbug1-users/browse_thread/thread/3ca6be6005ddf22e
    db_initの引数を変更した際に、削除フラグが立っているプロジェクトの情報を取
    得できないようになっていたため、削除されたサブプロジェクトが存在すると、
    エラーが発生していた。
    * リリースの準備

2010-01-04  smeghead  <smeghead@users.sourceforge.jp>

    * 1.3.07リリース

2010-01-04  smeghead  <smeghead@users.sourceforge.jp>

    * SeleniumのテストもSand Boxに対してテストを行なうように修正した。
    * Q&A管理のテンプレートを追加した。

2010-01-04  smeghead  <smeghead@users.sourceforge.jp>

    * サブプロジェクトの項目設定情報をエクスポートする機能を作成した。
    * 初期に作成するサブプロジェクトの名称をSand Boxになるようにした。

2010-01-01  smeghead  <smeghead@users.sourceforge.jp>

    * WebUIからサブプロジェクトの項目設定情報をエクスポートする機能の作成中。

2009-12-31  smeghead  <smeghead@users.sourceforge.jp>

    * TODO用のテンプレートを追加した。
    * copyrightの年号を2010に変更した。

2009-12-30  smeghead  <smeghead@users.sourceforge.jp>

    * 新規プロジェクト追加時に、プロジェクトテンプレートを選択して追加できるよ
    うにする修正中。

2009-12-29  smeghead  <smeghead@users.sourceforge.jp>

    * 1.3.06リリース

2009-12-29  smeghead  <smeghead@users.sourceforge.jp>

    * sqlite3_finalizeを重複して実行してしまう場合があるバグを修正した。

2009-12-27  smeghead  <smeghead@users.sourceforge.jp>

    * 1.3.05リリース

2009-12-27  smeghead  <smeghead@users.sourceforge.jp>

    * チケット検索ページで、数値項目の合計を表示するようにした。
    * 数値項目の入力チェックを作成した。
    * 数値項目関連のメッセージリソースを更新した。
    * 状態別チケット一覧にも合計の行を追加した。
    * リリースの準備

2009-12-12  smeghead  <smeghead@users.sourceforge.jp>

    * サブプロジェクトの管理ページでトップへのリンクがプロジェクト名になってい
    なかったのを修正した。

2009-11-13  smeghead  <smeghead@users.sourceforge.jp>
